test/libsolidity/syntaxTests/nameAndTypeResolution/318_invalid_array_declaration_with_rational.sol
contract test {
    function f() public {
        uint[3.5] a; a;
    }
}
// ----
// TypeError: (55-58): Array with fractional length specified.
